--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,8 @@
+<h1>Dumpling Battle</h1>
+<h2>To Hell and Back....for dumplings</h2>
+<h3>Enter yo names</h3>
 <form action="/names" method="post">
-  <input type="text" name="p1_name">
-  <input type="text" name="p2_name">
+  Player 1<input type="text" name="p1_name">
+  Player 2<input type="text" name="p2_name">
   <input type="submit" value="submit">
 </form>
