Adds attack method to player and refactors views

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,2 @@
-<h1><%= @p1_name %> vs <%= @p2_name %>: <%=@p2_hp%>HP</h1>
+<h1><%= @p1.name %> vs <%= @p2.name %>: <%=@p2.health%>HP</h1>
 <a href="/attack">Attack</a>
