Adds functionality to take turns

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,2 @@
-<h2><%= @game.player_one.name %> Attacked <%= @game.player_two.name%></h2>
+<h2><%= @game.defender.name %> Attacked <%= @game.attacker.name%></h2>
 <a href="/play">Return</a>
