--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,2 @@
-<h1><%= @game.player_one.name %> vs <%= @game.player_two.name %>: <%=@game.player_two.health%>HP</h1>
+<h1><%= @game.player_one.name %>: <%=@game.player_one.health%>HP vs <%= @game.player_two.name %>: <%=@game.player_two.health%>HP</h1>
 <a href="/attack">Attack</a>
